bk_ida/gccida/g2/find_base_term
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1700:4: error: expected ';' after expression
rtx v6; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1700:5: error: use of undeclared identifier 'v6'
rtx v6; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1721:35: error: expected ')'
base_term = find_base_term( ( rtx)v3[1]); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1721:27: note: to match this '('
base_term = find_base_term( ( rtx)v3[1]); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1747:11: error: expected ';' after expression
x = ( rtx)base_term[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1764:1: error: use of undeclared identifier 'v6'
v6 = find_base_term( x); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1769:7: error: use of undeclared identifier 'v6'
if ( !v6 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1771:13: error: use of undeclared identifier 'v6'
base_term = v6; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1772:38: error: use of undeclared identifier 'v6'
if ( ( unsigned __int16)( *( _WORD *)v6 - 67) > 1u && ( *( _WORD *)v6 != 25 || !*( ( _BYTE *)v6 + 2)) ) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1772:68: error: use of undeclared identifier 'v6'
if ( ( unsigned __int16)( *( _WORD *)v6 - 67) > 1u && ( *( _WORD *)v6 != 25 || !*( ( _BYTE *)v6 + 2)) ) 
                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1772:94: error: use of undeclared identifier 'v6'
if ( ( unsigned __int16)( *( _WORD *)v6 - 67) > 1u && ( *( _WORD *)v6 != 25 || !*( ( _BYTE *)v6 + 2)) ) 
                                                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/alias.c:1777:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)base_term[1]; 
               ^~~~~~~~~~~~
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_term/src/obj/alias.o] Error 1
